# lastboard

./: .env.example  .gitignore  README.md  mise.toml  pyproject.toml  server.py  settings.py
app/: compare_reviews_to_listens.py  release_detail.py
app/api/: lastfm.py  rec.py
app/util/: cache.py  filename.py  slug.py  unaccent.py  unartist.py
static/: iAWriterQuattroS-Regular.LICENSE.md  main.css  quattro.css
templates/: base.html.jinja  index.html.jinja
