[project]
name = "lastboard"
version = "0.1.0"
description = "Shows recent scrobbles versus recent ratings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofile>=3.9.0",
    "aiohttp>=3.13.5",
    "jinja2>=3.1.6",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "sanic>=25.12.0",
    "sanic-ext>=25.12.0",
]
